--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -254,24 +254,27 @@ So to tackle most of the disadvantages described by this technique, \textit{Rand
 \section{ Random Forests}\label{section:random_forests}
 
 Random Forests are estimators that extend from constructing a group of single decision trees and then combining them to produce a single output decision.
-This grouping of lots of classifiers is what is known as an \textit{ensemble}.
+This grouping of classifiers is known as an \textit{ensemble}.
+
 The objective in this construction is to focus on decision tree's low bias whilst controlling their overfit as much as possible.
-For this, a forest of single trees will be constructed in such a way that correlations among each of the individual models is limited as much as possible.
-And this is because each individual model will learn on a random subset of features or samples and then, an average of the single outputs will be used as the forest's target output to preserve single estimator's interdependence as much as possible.
-There  are other different techniques that intent to construct uncorrelated trees which are combined at the output, yet the main idea is common to all.
+For this, a forest of single trees will be constructed in such a way that correlations among each of the individual models is limited.
+The idea behind this is to have every individual model train on a random subset of features or samples and then, average the single outputs as the forest's target output.
+With this we preserve single estimator's interdependence as much as possible.
+There are other different techniques that intent to construct uncorrelated trees which are combined at the output, yet the main idea is common to all.
 
 \subsection{ Random Forests Formulation}\label{subsection:random_forests_formulation}
 
 Let $K$ be the number of trees in the ensemble and let $\Theta_k$ encode the parameters for the $k$-th tree.
 As we have mentioned before, there are various variants to the model and these variants will define the type of encoding for the $\Theta_k, k \in {1,\ldots,K}$  parameters.
-For the following part, we will not specify the overall type of ensemble constructed since the  proofs are general to all of them.
+For the following part, we will not specify the specific ensembly type constructed since the formulation is common to all of them.
 
 To start, we define
-$$h(\textbf{x},\Theta_k)$$ will be the corresponding individual classifier and we let $N$ be the number of samples in the training set $\mathcal{T}$.
+$$h(\textbf{x},\Theta_k)$$ as the corresponding individual classifier and we let $N$ be the number of samples in the training set $\mathcal{T}$.
 The creation of a random forest involves an iterative procedure where at the $k$-th step, the parameter $\Theta_k$ is fit from the same distribution as $\Theta_j, \ j<k$, yet it is built in a way that is independent of the previous parameters $\{\Theta_1, \ \ldots, \ \Theta_{k-1} \}$. %$\Theta$ will be encoded by a vector of randomly drawn integers from 1 to $M$ which is part of the model's hyperparameters.
 
 
 Let $\{ h_k(\textbf{x}) \}_{i=1}^K$\footnote{There is an abuse of notation by noting trees as $h_k(\textbf{x})$ and not $h(\textbf{x}, \Theta_k)$ } be a set of classifying trees and let $I(\cdot)$ denote the indicator function.
+
 Define the margin function as
 
 \begin{equation}
@@ -281,8 +284,7 @@ mg(\textbf{x},\textbf{y}) = \frac{1}{K}  \sum_{k=1}^K I(h_k(\textbf{x}) = \textb
 \end{equation}
 
 
-The margin function measures, in average, how much do the trees vote for the correct class in comparison to all other classes.
-It is the training error of the model when using the misclassification loss.
+This function measures, in average, how much do the trees vote for the correct class in comparison to all other classes and it is the training error of the model when using the misclassification loss.
 Here the generalization error is denoted as $PE*$ and is equal to
 
 \begin{equation}
@@ -302,22 +304,23 @@ This proof can be found in \cref{appx:sec:rforest_margin_function_convergence}.
 
 \subsection{ Experimental comparison to Decision Trees}\label{subsection:random_forests_comparison_trees}
 
-From what is formulated in \cref{subsection:random_forests_formulation} and in order to compare how this model improves over the Decision Tree model, we ran two experiment setups on a Random Forest learner for the simple task in \cref{target2}, using an $Accuracy$ score.
-This was a cross validation procedure of 10 folds for each configuration, where each experiment optimized the score on a different hyperparameter.
+From what is formulated in \cref{subsection:random_forests_formulation} and in order to compare how this model improves over the Decision Tree model, we ran two experiment setups on a Random Forest learner for the difficult  \cref{target2}.
+We selected the $Accuracy$ score to measure the learner's performance.
+The model was trained in a cross validation procedure of 10 folds for each configuration, and in each experiment we optimized the score for a different model hyperparameter.
 
-For the first, we evaluate the forest's scores on a maximum depth variation for the trees.
-And on the second one, we try to illustrate the point of \cref{subsection:random_forests_formulation} by considering forests of increasing size.
+For the first experiment, we evaluated the forest's scores on a maximum depth variation for the trees.
+And on the second one, we tried to illustrate the point of \cref{subsection:random_forests_formulation} by considering forests of increasing size.
 As a default configuration, we set both the trees' max depth and the number of trees to 10.
 
-Also, we pre-configure a balanced weighting of positive and negative samples in the loss function, where the each sample is weighted by the reciprocal of the class's ratio to the whole dataset.
-Finally, the impurity measure  we used was the is the Gini index for the splitting criteria at each tree's node.
+Also, we pre-configure a balanced weighting of positive and negative samples in the loss function, where each sample is weighted by the reciprocal of the class's ratio to the whole dataset.
+Finally, the impurity measure we used was the Gini index for the splitting criteria at each tree's node.
 
-Cross validation procedures ran for 1412.8 and 2506.1 seconds respectively. In both of them we excluded any user attributes that informed their home state and current endemic condition, in the time period $T_1$.
+Cross validation procedures ran for 1412.8 and 2506.1 seconds respectively. 
+In both of them we excluded any user attributes that informed their home state and current endemic condition, in the time period $T_1$.
 
 The experiment's scores outcomes across their hyperparameter values were graphed in \cref{fig:random_forest_validation_curves_depth_trees,fig:random_forest_validation_curves_num_trees}.
 For both, the cross-validated and training set scores were compared. In this way, for each hyperparameter value, the $1-Accuracy$ score is shown.
 In this way, having a lower score in the graphic means a better model was reached.
-
 
 \begin{figure}[h!]
     \begin{center}
@@ -339,18 +342,20 @@ In this way, having a lower score in the graphic means a better model was reache
 \end{figure}
 
 Recall how this relates to \cref{figure:dtree_overfit_problem_2}, in which a tree's training error always improves as a result of an increase in the tree's depth.
-Yet the tree's prediction error at one point suffers and deteriorates.
+Yet we saw how the tree's generalization error starts to suffer and deteriorate at one point.
+
 From what we can see in \cref{fig:random_forest_validation_curves_depth_trees}, the cross validated error is always decreasing for increasing tree depth.
 A very slight deceleration in the decrease of the cross validated error can be seen for tree depth bigger than 9.
-Yet the scores keeps improving and don't worsen.
-This is different to \cref{figure:dtree_overfit_problem_2} where if we let the tree grow deeper, at one point we only increase the performance of the training error.
+However scores keeps improving and don't worsen.
+This is different to \cref{figure:dtree_overfit_problem_2} where if we let the tree grow deeper, at one point we only worsen the performance of the test error.
 Here, we are possibly improving the generalization error, as indicated by the CV estimation.
 
  On the other hand, it is interesting to note that there is an insignificant decrease in the training and CV scores when the number of trees is increased.
 For this case, there is virtually no change in model error by improving bias or variance.
- An explanation for this might that we are setting a default tree depth of 10 levels already when running this experiment. And a tree configuration of this type might then be capturing all the possible model complexity to this dataset.
- Another plausible explanation for this is that, for this task, the forest's performance rapidly converges to the generalization error with a minimum of 10 trees and that adding more trees doesn't certainly improve on the predictions.
-
+ 
+An explanation for this might that we are setting a default tree depth of 10 levels already when running this experiment. 
+And a tree configuration of this type might then be capturing all the possible model complexity to this dataset.
+Another plausible explanation for this is that, for this task, the forest's performance rapidly converges to the generalization error with a minimum of 10 trees and that adding more trees doesn't certainly improve on the predictions.
 
 At their optimal configuration, both setups reached CV score averages of at least $75\%$, with a maximum of $81\%$ for the forest
 with trees of 16 levels.
@@ -367,8 +372,9 @@ Random Forests are built upon a bag of weaker classifier, of which each individu
 To build an estimate of the generalization error on the ensemble classifier, these individual scores and the relationship between them must be measured.
 In this sense, the \textit{strength} and \textit{correlation}of a Random Forest must be analyzed to arrive on an estimate of the generalization error.
 
+Define $$\hat{\jmath}( \textbf{x},\textbf{y}) = \argmax_{j \neq \textbf{y}} P_{\Theta}(h(\textbf{x}) = j)$$ 
 
-Define $$\hat{\jmath}( \textbf{x},\textbf{y}) = \argmax_{j \neq \textbf{y}} P_{\Theta}(h(\textbf{x}) = j)$$ and let the margin function for a random forest (not a group of classifiers) be defined as
+and let the margin function for a random forest (not a group of classifiers) be defined as
 
 \[
 mr(\textbf{x},\textbf{y}) = P_{\Theta}(h(\textbf{x}) = \textbf{y}) - P_{\Theta}(h(\textbf{x}) = \hat{\jmath})
@@ -394,7 +400,7 @@ Now define $ \rho(\Theta, \Theta')$ as the correlation between $rmg(\Theta,\text
 {\Expect_{\Theta, \Theta'} \left[ \sigma(\Theta) \sigma(\Theta')\right]}
 \end{equation}
 
-With these definitions we can then see that,
+With the above we can then see that,
 
 \begin{theorem}
 There exists an upper bound for the generalization error of a Random Forest which is    \begin{equation}
@@ -404,20 +410,20 @@ PE^* \leq \overline{\rho}\frac{(1-s^2)}{s^2}
 
 The proof of this can be found in \cref{appx:sec:rforest_predictive_error_bounds}.\\
 
-This bound on the generalization error shows the importance of the strength of each individual weak classifier in the forest and the correlation interdependence among them.
+This bound on the generalization error shows the importance of each individual weak classifier's strength to the forest's generalization error, and the correlation interdependence among them.
 
-This proof can also be found in~\cite{breiman-randomforests} and in that work it is said that the bound may not be tight enough for practical significance.
-Special importance is also put on the ratio between the correlation and the strength ($\frac{\overline{\rho}}{s^2}$) of the base learners where, to build a strong classifier, this should be as small as possible.
+This proof was first introduced in~\cite{breiman-randomforests} and there, it is said that the bound may not be tight enough for practical significance.
+Special importance is also put on the ratio between base learner's correlation and strength ($\frac{\overline{\rho}}{s^2}$). 
+It is know that, to build a strong classifier, this should be as small as possible.
 For this reason decision trees make a canonical choice for weak learners, being low biased models which are prone to overfitting.
 These ensembles are a first choice when building a first, cost-effective, model to deliver a prediction task with acceptable to excellent performance.
 
 
 \subsection{Other Notes on Random Forests}\label{subsection:random_forests_other_notes}
 
-One benefit of building Random Forest classifiers is that the algorithm easily increases the prediction error of a group of estimators by randomly building each of these in a way that decreases the variance of the overall model whilst trading a small loss in bias.
+One benefit of building Random Forest classifiers is that the algorithm can easily increase a group of estimators' prediction error by randomly building every specific learner in a way that decreases the overall model's variance whilst trading a small loss in bias.
 
-The model is also robust to the introduction of a number of noisy features.
-If the ratio of informative to non-informative features is not extreme, selecting $m$ features at random at each split will mean that in most cases, splits will be made on those informative features.
+The model is also robust to the introduction of noisy features where if the ratio of informative to non-informative features is not extreme, selecting $m$ features at random for each split will mean that, in most cases, splits will be made on those informative features.
 Note that in any given tree, the probability of drawing at least one informative feature in a split is still very high.
 This is because it follows a hyper geometric distribution $\mathcal{H}(P,j,l)$ with $l$ draws from a total population of $P$ features and only $j$ informative ones.
 
@@ -430,7 +436,7 @@ This effect will counter the overall reduction in variance of the forest and thu
 
 In addition, the algorithm benefits from a heuristic to measure variable importance, where a special modification in the way forests are built allows this to happen.
 The idea for this is that at each split we can measure the gain of using a certain variable for the split versus not using it.
-Given a candidate feature $X^j$ to be analyzed and for every node in a tree where a split is to be done, we compare the improvement in the split performance, as measured by some loss function, with and without $X^j$.
+Given a candidate feature $X^j$ to be analyzed and for every node in a tree where a split is to be done, we compare the improvement in split performance, as measured by some loss function, with and without $X^j$.
 These results are recorded and averaged across all trees and all the split scenarios to have a score for the feature.
 With this, the features with highest scores can be thought to be the most informative variables of the model.
 
