--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -754,7 +754,7 @@ This booster was first introduced by Friedman, J., and the full details of the w
 
 Given that each base learner has its own own parameter $\theta$  and its weight $\gamma$ in the booster's loss function, take
 
-$$\Gamma = \{(\gamma_m\,\theta_m)}_{m=1}^M$$
+$$\Gamma = \{ (\gamma_m\,\theta_m) \}_{m=1}^M$$
 
 to be the general parameter of the whole learner. 
 Note that if an optimization routine were to collectively fit all the parameters in $\Gamma$ to fit this model, we would computationally have a highly difficult model to train.
